JumpScript/tests/baselines/reference/inheritanceMemberAccessorOverridingAccessor.errors.txt
tests/cases/compiler/inheritanceMemberAccessorOverridingAccessor.jump(2,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/inheritanceMemberAccessorOverridingAccessor.jump(5,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/inheritanceMemberAccessorOverridingAccessor.jump(11,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/inheritanceMemberAccessorOverridingAccessor.jump(14,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/inheritanceMemberAccessorOverridingAccessor.jump (4 errors) ====
    class a {
        get x() {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return "20";
        }
        set x(aValue: string) {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
        }
    }
    
    class b extends a {
        get x() {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return "20";
        }
        set x(aValue: string) {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
        }
    }